[package]
name = "ipinfodb"
version = "0.1.1"
authors = ["Richard Hozák <r.hozak@seznam.cz>"]
license = "MIT/Apache-2.0"
homepage = "https://github.com/zxey/ipinfodb-rs"
keywords = ["ip", "location", "geolocation"]
description = "Rust wrapper for ipinfodb geolocation api."
readme = "README.md"

[dependencies]
reqwest = "0.8"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
failure = "0.1"
